src/parser.output
Terminals unused in grammar

    ERR_INVALID_ID
    ERR_INVALID_CHARCONST
    ERR_UNKNOWN_TOKEN


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declaration
    3                | declarationList declaration

    4 declaration: varDeclaration ";"
    5            | functDeclaration
    6            | error

    7 varDeclaration: varSimpleDeclaration
    8               | varSimpleDeclaration "=" logicalOrExp
    9               | arrayDeclaration
   10               | arrayDeclaration "=" arrayDefinition
   11               | tableDeclaration
   12               | tableDeclaration "=" tableDefinition

   13 varSimpleDeclaration: typeSpecifier IDENTIFIER

   14 arrayDeclaration: typeSpecifier IDENTIFIER "[" "]"

   15 arrayDefinition: "[" constList "]"

   16 tableDeclaration: "table" typeSpecifier IDENTIFIER "[" "]"

   17 tableDefinition: "|" "(" stringList ")" ":" columnContent "|"

   18 constList: constant
   19          | constList "," constant

   20 stringList: STRINGCONST
   21           | stringList "," STRINGCONST

   22 columnContent: "(" constList ")"
   23              | columnContent "," "(" constList ")"

   24 functDeclaration: typeSpecifier IDENTIFIER "(" parameterList ")" compoundStmt
   25                 | typeSpecifier IDENTIFIER "(" ")" compoundStmt

   26 parameterList: parameterDeclaration
   27              | parameterList "," parameterDeclaration

   28 parameterDeclaration: typeSpecifier IDENTIFIER
   29                     | "void"

   30 compoundStmt: "{" "}"
   31             | "{" statementList "}"

   32 statementList: statement
   33              | statementList statement

   34 statement: varDeclaration ";"
   35          | expression ";"
   36          | iterationStmt
   37          | conditionalStmt
   38          | returnStmt ";"
   39          | "read" "(" IDENTIFIER ")" ";"
   40          | "write" "(" baseValue ")" ";"
   41          | error

   42 iterationStmt: "while" "(" expression ")" compoundStmt
   43              | "for" "(" forDec ")" "in" IDENTIFIER compoundStmt

   44 forDec: typeSpecifier IDENTIFIER

   45 conditionalStmt: ifStmt elseStmt

   46 ifStmt: "if" "(" expression ")" compoundStmt

   47 elseStmt: "else" compoundStmt
   48         | %empty

   49 returnStmt: "return"
   50           | "return" expression

   51 expression: logicalOrExp
   52           | mutable "=" logicalOrExp

   53 logicalOrExp: logicalAndExp
   54             | logicalOrExp "||" logicalAndExp

   55 logicalAndExp: equalityExp
   56              | logicalAndExp "&&" equalityExp

   57 equalityExp: relationExp
   58            | equalityExp "==" relationExp
   59            | equalityExp "!=" relationExp

   60 relationExp: sumExp
   61            | relationExp ">" sumExp
   62            | relationExp "<" sumExp
   63            | relationExp ">=" sumExp
   64            | relationExp "<=" sumExp

   65 sumExp: multExp
   66       | sumExp "+" multExp
   67       | sumExp "-" multExp

   68 multExp: unaryExp
   69        | multExp "*" unaryExp
   70        | multExp "/" unaryExp
   71        | multExp "%" unaryExp

   72 unaryExp: baseValue
   73         | "!" unaryExp

   74 baseValue: "(" expression ")"
   75          | error
   76          | constant
   77          | functCall
   78          | mutable

   79 mutable: IDENTIFIER
   80        | IDENTIFIER "[" expression "]"
   81        | IDENTIFIER "[" expression ":" expression "]"
   82        | IDENTIFIER "[" expression ":" expression ":" expression "]"

   83 functCall: IDENTIFIER "(" args ")"

   84 args: argList
   85     | %empty

   86 argList: expression "," argList
   87        | expression

   88 constant: INTCONST
   89         | FLOATCONST
   90         | BOOLEANCONST
   91         | CHARCONST
   92         | STRINGCONST

   93 typeSpecifier: "char"
   94              | "int"
   95              | "float"
   96              | "bool"
   97              | "string"
   98              | "void"


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 41 75
    IDENTIFIER <tree_node> (258) 13 14 16 24 25 28 39 43 44 79 80 81 82 83
    INTCONST <tree_node> (259) 88
    FLOATCONST <tree_node> (260) 89
    BOOLEANCONST <tree_node> (261) 90
    CHARCONST <tree_node> (262) 91
    STRINGCONST <tree_node> (263) 20 21 92
    "while" <tree_node> (264) 42
    "for" <tree_node> (265) 43
    "in" <tree_node> (266) 43
    "if" <tree_node> (267) 46
    "else" <tree_node> (268) 47
    "return" <tree_node> (269) 49 50
    "read" <tree_node> (270) 39
    "write" <tree_node> (271) 40
    "char" <tree_node> (272) 93
    "int" <tree_node> (273) 94
    "float" <tree_node> (274) 95
    "string" <tree_node> (275) 97
    "table" <tree_node> (276) 16
    "bool" <tree_node> (277) 96
    "void" <tree_node> (278) 29 98
    "+" <tree_node> (279) 66
    "-" <tree_node> (280) 67
    "*" <tree_node> (281) 69
    "/" <tree_node> (282) 70
    "%" <tree_node> (283) 71
    "!" <tree_node> (284) 73
    "<" <tree_node> (285) 62
    "<=" <tree_node> (286) 64
    ">" <tree_node> (287) 61
    ">=" <tree_node> (288) 63
    "!=" <tree_node> (289) 59
    "==" <tree_node> (290) 58
    "||" <tree_node> (291) 54
    "&&" <tree_node> (292) 56
    "{" <tree_node> (293) 30 31
    "}" <tree_node> (294) 30 31
    "[" <tree_node> (295) 14 15 16 80 81 82
    "]" <tree_node> (296) 14 15 16 80 81 82
    "(" <tree_node> (297) 17 22 23 24 25 39 40 42 43 46 74 83
    ")" <tree_node> (298) 17 22 23 24 25 39 40 42 43 46 74 83
    ":" <tree_node> (299) 17 81 82
    ";" <tree_node> (300) 4 34 35 38 39 40
    "=" <tree_node> (301) 8 10 12 52
    "," <tree_node> (302) 19 21 23 27 86
    "|" <tree_node> (303) 17
    ERR_INVALID_ID (304)
    ERR_INVALID_CHARCONST (305)
    ERR_UNKNOWN_TOKEN (306)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program (53)
        on left: 1
        on right: 0
    declarationList <tree_node> (54)
        on left: 2 3
        on right: 1 3
    declaration <tree_node> (55)
        on left: 4 5 6
        on right: 2 3
    varDeclaration <tree_node> (56)
        on left: 7 8 9 10 11 12
        on right: 4 34
    varSimpleDeclaration <tree_node> (57)
        on left: 13
        on right: 7 8
    arrayDeclaration <tree_node> (58)
        on left: 14
        on right: 9 10
    arrayDefinition <tree_node> (59)
        on left: 15
        on right: 10
    tableDeclaration <tree_node> (60)
        on left: 16
        on right: 11 12
    tableDefinition <tree_node> (61)
        on left: 17
        on right: 12
    constList <tree_node> (62)
        on left: 18 19
        on right: 15 19 22 23
    stringList <tree_node> (63)
        on left: 20 21
        on right: 17 21
    columnContent <tree_node> (64)
        on left: 22 23
        on right: 17 23
    functDeclaration <tree_node> (65)
        on left: 24 25
        on right: 5
    parameterList <tree_node> (66)
        on left: 26 27
        on right: 24 27
    parameterDeclaration <tree_node> (67)
        on left: 28 29
        on right: 26 27
    compoundStmt <tree_node> (68)
        on left: 30 31
        on right: 24 25 42 43 46 47
    statementList <tree_node> (69)
        on left: 32 33
        on right: 31 33
    statement <tree_node> (70)
        on left: 34 35 36 37 38 39 40 41
        on right: 32 33
    iterationStmt <tree_node> (71)
        on left: 42 43
        on right: 36
    forDec <tree_node> (72)
        on left: 44
        on right: 43
    conditionalStmt <tree_node> (73)
        on left: 45
        on right: 37
    ifStmt <tree_node> (74)
        on left: 46
        on right: 45
    elseStmt <tree_node> (75)
        on left: 47 48
        on right: 45
    returnStmt <tree_node> (76)
        on left: 49 50
        on right: 38
    expression <tree_node> (77)
        on left: 51 52
        on right: 35 42 46 50 74 80 81 82 86 87
    logicalOrExp <tree_node> (78)
        on left: 53 54
        on right: 8 51 52 54
    logicalAndExp <tree_node> (79)
        on left: 55 56
        on right: 53 54 56
    equalityExp <tree_node> (80)
        on left: 57 58 59
        on right: 55 56 58 59
    relationExp <tree_node> (81)
        on left: 60 61 62 63 64
        on right: 57 58 59 61 62 63 64
    sumExp <tree_node> (82)
        on left: 65 66 67
        on right: 60 61 62 63 64 66 67
    multExp <tree_node> (83)
        on left: 68 69 70 71
        on right: 65 66 67 69 70 71
    unaryExp <tree_node> (84)
        on left: 72 73
        on right: 68 69 70 71 73
    baseValue <tree_node> (85)
        on left: 74 75 76 77 78
        on right: 40 72
    mutable <tree_node> (86)
        on left: 79 80 81 82
        on right: 52 78
    functCall <tree_node> (87)
        on left: 83
        on right: 77
    args <tree_node> (88)
        on left: 84 85
        on right: 83
    argList <tree_node> (89)
        on left: 86 87
        on right: 84 86
    constant <tree_node> (90)
        on left: 88 89 90 91 92
        on right: 18 19 76
    typeSpecifier <tree_node> (91)
        on left: 93 94 95 96 97 98
        on right: 13 14 16 24 25 28 44


State 0

    0 $accept: . program $end

    error     shift, and go to state 1
    "char"    shift, and go to state 2
    "int"     shift, and go to state 3
    "float"   shift, and go to state 4
    "string"  shift, and go to state 5
    "table"   shift, and go to state 6
    "bool"    shift, and go to state 7
    "void"    shift, and go to state 8

    program               go to state 9
    declarationList       go to state 10
    declaration           go to state 11
    varDeclaration        go to state 12
    varSimpleDeclaration  go to state 13
    arrayDeclaration      go to state 14
    tableDeclaration      go to state 15
    functDeclaration      go to state 16
    typeSpecifier         go to state 17


State 1

    6 declaration: error .

    $end      reduce using rule 6 (declaration)
    error     reduce using rule 6 (declaration)
    "char"    reduce using rule 6 (declaration)
    "int"     reduce using rule 6 (declaration)
    "float"   reduce using rule 6 (declaration)
    "string"  reduce using rule 6 (declaration)
    "table"   reduce using rule 6 (declaration)
    "bool"    reduce using rule 6 (declaration)
    "void"    reduce using rule 6 (declaration)


State 2

   93 typeSpecifier: "char" .

    IDENTIFIER  reduce using rule 93 (typeSpecifier)


State 3

   94 typeSpecifier: "int" .

    IDENTIFIER  reduce using rule 94 (typeSpecifier)


State 4

   95 typeSpecifier: "float" .

    IDENTIFIER  reduce using rule 95 (typeSpecifier)


State 5

   97 typeSpecifier: "string" .

    IDENTIFIER  reduce using rule 97 (typeSpecifier)


State 6

   16 tableDeclaration: "table" . typeSpecifier IDENTIFIER "[" "]"

    "char"    shift, and go to state 2
    "int"     shift, and go to state 3
    "float"   shift, and go to state 4
    "string"  shift, and go to state 5
    "bool"    shift, and go to state 7
    "void"    shift, and go to state 8

    typeSpecifier  go to state 18


State 7

   96 typeSpecifier: "bool" .

    IDENTIFIER  reduce using rule 96 (typeSpecifier)


State 8

   98 typeSpecifier: "void" .

    IDENTIFIER  reduce using rule 98 (typeSpecifier)


State 9

    0 $accept: program . $end

    $end  shift, and go to state 19


State 10

    1 program: declarationList .
    3 declarationList: declarationList . declaration

    error     shift, and go to state 1
    "char"    shift, and go to state 2
    "int"     shift, and go to state 3
    "float"   shift, and go to state 4
    "string"  shift, and go to state 5
    "table"   shift, and go to state 6
    "bool"    shift, and go to state 7
    "void"    shift, and go to state 8

    $end  reduce using rule 1 (program)

    declaration           go to state 20
    varDeclaration        go to state 12
    varSimpleDeclaration  go to state 13
    arrayDeclaration      go to state 14
    tableDeclaration      go to state 15
    functDeclaration      go to state 16
    typeSpecifier         go to state 17


State 11

    2 declarationList: declaration .

    $end      reduce using rule 2 (declarationList)
    error     reduce using rule 2 (declarationList)
    "char"    reduce using rule 2 (declarationList)
    "int"     reduce using rule 2 (declarationList)
    "float"   reduce using rule 2 (declarationList)
    "string"  reduce using rule 2 (declarationList)
    "table"   reduce using rule 2 (declarationList)
    "bool"    reduce using rule 2 (declarationList)
    "void"    reduce using rule 2 (declarationList)


State 12

    4 declaration: varDeclaration . ";"

    ";"  shift, and go to state 21


State 13

    7 varDeclaration: varSimpleDeclaration .
    8               | varSimpleDeclaration . "=" logicalOrExp

    "="  shift, and go to state 22

    ";"  reduce using rule 7 (varDeclaration)


State 14

    9 varDeclaration: arrayDeclaration .
   10               | arrayDeclaration . "=" arrayDefinition

    "="  shift, and go to state 23

    ";"  reduce using rule 9 (varDeclaration)


State 15

   11 varDeclaration: tableDeclaration .
   12               | tableDeclaration . "=" tableDefinition

    "="  shift, and go to state 24

    ";"  reduce using rule 11 (varDeclaration)


State 16

    5 declaration: functDeclaration .

    $end      reduce using rule 5 (declaration)
    error     reduce using rule 5 (declaration)
    "char"    reduce using rule 5 (declaration)
    "int"     reduce using rule 5 (declaration)
    "float"   reduce using rule 5 (declaration)
    "string"  reduce using rule 5 (declaration)
    "table"   reduce using rule 5 (declaration)
    "bool"    reduce using rule 5 (declaration)
    "void"    reduce using rule 5 (declaration)


State 17

   13 varSimpleDeclaration: typeSpecifier . IDENTIFIER
   14 arrayDeclaration: typeSpecifier . IDENTIFIER "[" "]"
   24 functDeclaration: typeSpecifier . IDENTIFIER "(" parameterList ")" compoundStmt
   25                 | typeSpecifier . IDENTIFIER "(" ")" compoundStmt

    IDENTIFIER  shift, and go to state 25


State 18

   16 tableDeclaration: "table" typeSpecifier . IDENTIFIER "[" "]"

    IDENTIFIER  shift, and go to state 26


State 19

    0 $accept: program $end .

    $default  accept


State 20

    3 declarationList: declarationList declaration .

    $end      reduce using rule 3 (declarationList)
    error     reduce using rule 3 (declarationList)
    "char"    reduce using rule 3 (declarationList)
    "int"     reduce using rule 3 (declarationList)
    "float"   reduce using rule 3 (declarationList)
    "string"  reduce using rule 3 (declarationList)
    "table"   reduce using rule 3 (declarationList)
    "bool"    reduce using rule 3 (declarationList)
    "void"    reduce using rule 3 (declarationList)


State 21

    4 declaration: varDeclaration ";" .

    $end      reduce using rule 4 (declaration)
    error     reduce using rule 4 (declaration)
    "char"    reduce using rule 4 (declaration)
    "int"     reduce using rule 4 (declaration)
    "float"   reduce using rule 4 (declaration)
    "string"  reduce using rule 4 (declaration)
    "table"   reduce using rule 4 (declaration)
    "bool"    reduce using rule 4 (declaration)
    "void"    reduce using rule 4 (declaration)


State 22

    8 varDeclaration: varSimpleDeclaration "=" . logicalOrExp

    error         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INTCONST      shift, and go to state 29
    FLOATCONST    shift, and go to state 30
    BOOLEANCONST  shift, and go to state 31
    CHARCONST     shift, and go to state 32
    STRINGCONST   shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35

    logicalOrExp   go to state 36
    logicalAndExp  go to state 37
    equalityExp    go to state 38
    relationExp    go to state 39
    sumExp         go to state 40
    multExp        go to state 41
    unaryExp       go to state 42
    baseValue      go to state 43
    mutable        go to state 44
    functCall      go to state 45
    constant       go to state 46


State 23

   10 varDeclaration: arrayDeclaration "=" . arrayDefinition

    "["  shift, and go to state 47

    arrayDefinition  go to state 48


State 24

   12 varDeclaration: tableDeclaration "=" . tableDefinition

    "|"  shift, and go to state 49

    tableDefinition  go to state 50


State 25

   13 varSimpleDeclaration: typeSpecifier IDENTIFIER .
   14 arrayDeclaration: typeSpecifier IDENTIFIER . "[" "]"
   24 functDeclaration: typeSpecifier IDENTIFIER . "(" parameterList ")" compoundStmt
   25                 | typeSpecifier IDENTIFIER . "(" ")" compoundStmt

    "["  shift, and go to state 51
    "("  shift, and go to state 52

    ";"  reduce using rule 13 (varSimpleDeclaration)
    "="  reduce using rule 13 (varSimpleDeclaration)


State 26

   16 tableDeclaration: "table" typeSpecifier IDENTIFIER . "[" "]"

    "["  shift, and go to state 53


State 27

   75 baseValue: error .

    "+"   reduce using rule 75 (baseValue)
    "-"   reduce using rule 75 (baseValue)
    "*"   reduce using rule 75 (baseValue)
    "/"   reduce using rule 75 (baseValue)
    "%"   reduce using rule 75 (baseValue)
    "<"   reduce using rule 75 (baseValue)
    "<="  reduce using rule 75 (baseValue)
    ">"   reduce using rule 75 (baseValue)
    ">="  reduce using rule 75 (baseValue)
    "!="  reduce using rule 75 (baseValue)
    "=="  reduce using rule 75 (baseValue)
    "||"  reduce using rule 75 (baseValue)
    "&&"  reduce using rule 75 (baseValue)
    ";"   reduce using rule 75 (baseValue)


State 28

   79 mutable: IDENTIFIER .
   80        | IDENTIFIER . "[" expression "]"
   81        | IDENTIFIER . "[" expression ":" expression "]"
   82        | IDENTIFIER . "[" expression ":" expression ":" expression "]"
   83 functCall: IDENTIFIER . "(" args ")"

    "["  shift, and go to state 54
    "("  shift, and go to state 55

    "+"   reduce using rule 79 (mutable)
    "-"   reduce using rule 79 (mutable)
    "*"   reduce using rule 79 (mutable)
    "/"   reduce using rule 79 (mutable)
    "%"   reduce using rule 79 (mutable)
    "<"   reduce using rule 79 (mutable)
    "<="  reduce using rule 79 (mutable)
    ">"   reduce using rule 79 (mutable)
    ">="  reduce using rule 79 (mutable)
    "!="  reduce using rule 79 (mutable)
    "=="  reduce using rule 79 (mutable)
    "||"  reduce using rule 79 (mutable)
    "&&"  reduce using rule 79 (mutable)
    ";"   reduce using rule 79 (mutable)


State 29

   88 constant: INTCONST .

    "+"   reduce using rule 88 (constant)
    "-"   reduce using rule 88 (constant)
    "*"   reduce using rule 88 (constant)
    "/"   reduce using rule 88 (constant)
    "%"   reduce using rule 88 (constant)
    "<"   reduce using rule 88 (constant)
    "<="  reduce using rule 88 (constant)
    ">"   reduce using rule 88 (constant)
    ">="  reduce using rule 88 (constant)
    "!="  reduce using rule 88 (constant)
    "=="  reduce using rule 88 (constant)
    "||"  reduce using rule 88 (constant)
    "&&"  reduce using rule 88 (constant)
    ";"   reduce using rule 88 (constant)


State 30

   89 constant: FLOATCONST .

    "+"   reduce using rule 89 (constant)
    "-"   reduce using rule 89 (constant)
    "*"   reduce using rule 89 (constant)
    "/"   reduce using rule 89 (constant)
    "%"   reduce using rule 89 (constant)
    "<"   reduce using rule 89 (constant)
    "<="  reduce using rule 89 (constant)
    ">"   reduce using rule 89 (constant)
    ">="  reduce using rule 89 (constant)
    "!="  reduce using rule 89 (constant)
    "=="  reduce using rule 89 (constant)
    "||"  reduce using rule 89 (constant)
    "&&"  reduce using rule 89 (constant)
    ";"   reduce using rule 89 (constant)


State 31

   90 constant: BOOLEANCONST .

    "+"   reduce using rule 90 (constant)
    "-"   reduce using rule 90 (constant)
    "*"   reduce using rule 90 (constant)
    "/"   reduce using rule 90 (constant)
    "%"   reduce using rule 90 (constant)
    "<"   reduce using rule 90 (constant)
    "<="  reduce using rule 90 (constant)
    ">"   reduce using rule 90 (constant)
    ">="  reduce using rule 90 (constant)
    "!="  reduce using rule 90 (constant)
    "=="  reduce using rule 90 (constant)
    "||"  reduce using rule 90 (constant)
    "&&"  reduce using rule 90 (constant)
    ";"   reduce using rule 90 (constant)


State 32

   91 constant: CHARCONST .

    "+"   reduce using rule 91 (constant)
    "-"   reduce using rule 91 (constant)
    "*"   reduce using rule 91 (constant)
    "/"   reduce using rule 91 (constant)
    "%"   reduce using rule 91 (constant)
    "<"   reduce using rule 91 (constant)
    "<="  reduce using rule 91 (constant)
    ">"   reduce using rule 91 (constant)
    ">="  reduce using rule 91 (constant)
    "!="  reduce using rule 91 (constant)
    "=="  reduce using rule 91 (constant)
    "||"  reduce using rule 91 (constant)
    "&&"  reduce using rule 91 (constant)
    ";"   reduce using rule 91 (constant)


State 33

   92 constant: STRINGCONST .

    "+"   reduce using rule 92 (constant)
    "-"   reduce using rule 92 (constant)
    "*"   reduce using rule 92 (constant)
    "/"   reduce using rule 92 (constant)
    "%"   reduce using rule 92 (constant)
    "<"   reduce using rule 92 (constant)
    "<="  reduce using rule 92 (constant)
    ">"   reduce using rule 92 (constant)
    ">="  reduce using rule 92 (constant)
    "!="  reduce using rule 92 (constant)
    "=="  reduce using rule 92 (constant)
    "||"  reduce using rule 92 (constant)
    "&&"  reduce using rule 92 (constant)
    ";"   reduce using rule 92 (constant)


State 34

   73 unaryExp: "!" . unaryExp

    error         shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INTCONST      shift, and go to state 29
    FLOATCONST    shift, and go to state 30
    BOOLEANCONST  shift, and go to state 31
    CHARCONST     shift, and go to state 32
    STRINGCONST   shift, and go to state 33
    "!"           shift, and go to state 34
    "("           shift, and go to state 35

    unaryExp   go to state 56
    baseValue  go to state 43
    mutable    go to state 44
    functCall  go to state 45
    constant   go to state 46


State 35

   74 baseValue: "(" . expression ")"

    error         shift, and go to state 189
    IDENTIFIER    shift, and go to state 190
    INTCONST      shift, and go to state 191
    FLOATCONST    shift, and go to state 192
    BOOLEANCONST  shift, and go to state 193
    CHARCONST     shift, and go to state 194
    STRINGCONST   shift, and go to state 195
    "!"           shift, and go to state 196
    "("           shift, and go to state 197

    expression     go to state 57
    logicalOrExp   go to state 58
    logicalAndExp  go to state 198
    equalityExp    go to state 199
    relationExp    go to state 200
    sumExp         go to state 201
    multExp        go to state 202
    unaryExp       go to state 203
    baseValue      go to state 204
    mutable        go to state 59
    functCall      go to state 205
    constant       go to state 206


State 36

    8 varDeclaration: varSimpleDeclaration "=" logicalOrExp .
   54 logicalOrExp: logicalOrExp . "||" logicalAndExp

    "||"  shift, and go to state 60

    ";"  reduce using rule 8 (varDeclaration)


State 37

   53 logicalOrExp: logicalAndExp .
   56 logicalAndExp: logicalAndExp . "&&" equalityExp

    "&&"  shift, and go to state 61

    "||"  reduce using rule 53 (logicalOrExp)
    ";"   reduce using rule 53 (logicalOrExp)


State 38

   55 logicalAndExp: equalityExp .
   58 equalityExp: equalityExp . "==" relationExp
   59            | equalityExp . "!=" relationExp

    "!="  shift, and go to state 62
    "=="  shift, and go to state 63

    "||"  reduce using rule 55 (logicalAndExp)
    "&&"  reduce using rule 55 (logicalAndExp)
    ";"   reduce using rule 55 (logicalAndExp)


State 39

   57 equalityExp: relationExp .
   61 relationExp: relationExp . ">" sumExp
   62            | relationExp . "<" sumExp
   63            | relationExp . ">=" sumExp
   64            | relationExp . "<=" sumExp

    "<"   shift, and go to state 64
    "<="  shift, and go to state 65
    ">"   shift, and go to state 66
    ">="  shift, and go to state 67

    "!="  reduce using rule 57 (equalityExp)
    "=="  reduce using rule 57 (equalityExp)
    "||"  reduce using rule 57 (equalityExp)
    "&&"  reduce using rule 57 (equalityExp)
    ";"   reduce using rule 57 (equalityExp)


State 40

   60 relationExp: sumExp .
   66 sumExp: sumExp . "+" multExp
   67       | sumExp . "-" multExp

    "+"  shift, and go to state 68
    "-"  shift, and go to state 69

    "<"   reduce using rule 60 (relationExp)
    "<="  reduce using rule 60 (relationExp)
    ">"   reduce using rule 60 (relationExp)
    ">="  reduce using rule 60 (relationExp)
    "!="  reduce using rule 60 (relationExp)
    "=="  reduce using rule 60 (relationExp)
    "||"  reduce using rule 60 (relationExp)
    "&&"  reduce using rule 60 (relationExp)
    ";"   reduce using rule 60 (relationExp)


State 41

   65 sumExp: multExp .
   69 multExp: multExp . "*" unaryExp
   70        | multExp . "/" unaryExp
   71        | multExp . "%" unaryExp

    "*"  shift, and go to state 70
    "/"  shift, and go to state 71
    "%"  shift, and go to state 72

    "+"   reduce using rule 65 (sumExp)
    "-"   reduce using rule 65 (sumExp)
    "<"   reduce using rule 65 (sumExp)
    "<="  reduce using rule 65 (sumExp)
    ">"   reduce using rule 65 (sumExp)
    ">="  reduce using rule 65 (sumExp)
    "!="  reduce using rule 65 (sumExp)
    "=="  reduce using rule 65 (sumExp)
    "||"  reduce using rule 65 (sumExp)
    "&&"  reduce using rule 65 (sumExp)
    ";"   reduce using rule 65 (sumExp)


State 42

   68 multExp: unaryExp .

    "+"   reduce using rule 68 (multExp)
    "-"   reduce using rule 68 (multExp)
    "*"   reduce using rule 68 (multExp)
    "/"   reduce using rule 68 (multExp)
    "%"   reduce using rule 68 (multExp)
    "<"   reduce using rule 68 (multExp)
    "<="  reduce using rule 68 (multExp)
    ">"   reduce using rule 68 (multExp)
    ">="  reduce using rule 68 (multExp)
    "!="  reduce using rule 68 (multExp)
    "=="  reduce using rule 68 (multExp)
    "||"  reduce using rule 68 (multExp)
    "&&"  reduce using rule 68 (multExp)
    ";"   reduce using rule 68 (multExp)


State 43

   72 unaryExp: baseValue .

    "+"   reduce using rule 72 (unaryExp)
    "-"   reduce using rule 72 (unaryExp)
    "*"   reduce using rule 72 (unaryExp)
    "/"   reduce using rule 72 (unaryExp)
    "%"   reduce using rule 72 (unaryExp)
    "<"   reduce using rule 72 (unaryExp)
    "<="  reduce using rule 72 (unaryExp)
    ">"   reduce using rule 72 (unaryExp)
    ">="  reduce using rule 72 (unaryExp)
    "!="  reduce using rule 72 (unaryExp)
    "=="  reduce using rule 72 (unaryExp)
    "||"  reduce using rule 72 (unaryExp)
    "&&"  reduce using rule 72 (unaryExp)
    ";"   reduce using rule 72 (unaryExp)


State 44

   78 baseValue: mutable .

    "+"   reduce using rule 78 (baseValue)
    "-"   reduce using rule 78 (baseValue)
    "*"   reduce using rule 78 (baseValue)
    "/"   reduce using rule 78 (baseValue)
    "%"   reduce using rule 78 (baseValue)
    "<"   reduce using rule 78 (baseValue)
    "<="  reduce using rule 78 (baseValue)
    ">"   reduce using rule 78 (baseValue)
    ">="  reduce using rule 78 (baseValue)
    "!="  reduce using rule 78 (baseValue)
    "=="  reduce using rule 78 (baseValue)
    "||"  reduce using rule 78 (baseValue)
    "&&"  reduce using rule 78 (baseValue)
    ";"   reduce using rule 78 (baseValue)


State 45

   77 baseValue: functCall .

    "+"   reduce using rule 77 (baseValue)
    "-"   reduce using rule 77 (baseValue)
    "*"   reduce using rule 77 (baseValue)
    "/"   reduce using rule 77 (baseValue)
    "%"   reduce using rule 77 (baseValue)
    "<"   reduce using rule 77 (baseValue)
    "<="  reduce using rule 77 (baseValue)
    ">"   reduce using rule 77 (baseValue)
    ">="  reduce using rule 77 (baseValue)
    "!="  reduce using rule 77 (baseValue)
    "=="  reduce using rule 77 (baseValue)
    "||"  reduce using rule 77 (baseValue)
    "&&"  reduce using rule 77 (baseValue)
    ";"   reduce using rule 77 (baseValue)


State 46

   76 baseValue: constant .

    "+"   reduce using rule 76 (baseValue)
    "-"   reduce using rule 76 (baseValue)
    "*"   reduce using rule 76 (baseValue)
    "/"   reduce using rule 76 (baseValue)
    "%"   reduce using rule 76 (baseValue)
    "<"   reduce using rule 76 (baseValue)
    "<="  reduce using rule 76 (baseValue)
    ">"   reduce using rule 76 (baseValue)
    ">="  reduce using rule 76 (baseValue)
    "!="  reduce using rule 76 (baseValue)
    "=="  reduce using rule 76 (baseValue)
    "||"  reduce using rule 76 (baseValue)
    "&&"  reduce using rule 76 (baseValue)
    ";"   reduce using rule 76 (baseValue)


State 47

   15 arrayDefinition: "[" . constList "]"

    INTCONST      shift, and go to state 207
    FLOATCONST    shift, and go to state 208
    BOOLEANCONST  shift, and go to state 209
    CHARCONST     shift, and go to state 210
    STRINGCONST   shift, and go to state 211

    constList  go to state 73
    constant   go to state 74


State 48

   10 varDeclaration: arrayDeclaration "=" arrayDefinition .

    ";"  reduce using rule 10 (varDeclaration)


State 49

   17 tableDefinition: "|" . "(" stringList ")" ":" columnContent "|"

    "("  shift, and go to state 75


State 50

   12 varDeclaration: tableDeclaration "=" tableDefinition .

    ";"  reduce using rule 12 (varDeclaration)


State 51

   14 arrayDeclaration: typeSpecifier IDENTIFIER "[" . "]"

    "]"  shift, and go to state 76


State 52

   24 functDeclaration: typeSpecifier IDENTIFIER "(" . parameterList ")" compoundStmt
   25                 | typeSpecifier IDENTIFIER "(" . ")" compoundStmt

    "char"    shift, and go to state 2
    "int"     shift, and go to state 3
    "float"   shift, and go to state 4
    "string"  shift, and go to state 5
    "bool"    shift, and go to state 7
    "void"    shift, and go to state 77
    ")"       shift, and go to state 78

    parameterList         go to state 79
    parameterDeclaration  go to state 80
    typeSpecifier         go to state 81


State 53

   16 tableDeclaration: "table" typeSpecifier IDENTIFIER "[" . "]"

    "]"  shift, and go to state 82


State 54

   80 mutable: IDENTIFIER "[" . expression "]"
   81        | IDENTIFIER "[" . expression ":" expression "]"
   82        | IDENTIFIER "[" . expression ":" expression ":" expression "]"

    error         shift, and go to state 212
    IDENTIFIER    shift, and go to state 213
    INTCONST      shift, and go to state 214
    FLOATCONST    shift, and go to state 215
    BOOLEANCONST  shift, and go to state 216
    CHARCONST     shift, and go to state 217
    STRINGCONST   shift, and go to state 218
    "!"           shift, and go to state 219
    "("           shift, and go to state 220

    expression     go to state 83
    logicalOrExp   go to state 221
    logicalAndExp  go to state 222
    equalityExp    go to state 223
    relationExp    go to state 224
    sumExp         go to state 225
    multExp        go to state 226
    unaryExp       go to state 227
    baseValue      go to state 228
    mutable        go to state 229
    functCall      go to state 230
    constant       go to state 231


State 55

   83 functCall: IDENTIFIER "(" . args ")"

    error         shift, and go to state 232
    IDENTIFIER    shift, and go to state 233
    INTCONST      shift, and go to state 234
    FLOATCONST    shift, and go to state 235
    BOOLEANCONST  shift, and go to state 236
    CHARCONST     shift, and go to state 237
    STRINGCONST   shift, and go to state 238
    "!"           shift, and go to state 239
    "("           shift, and go to state 240

    ")"  reduce using rule 85 (args)

    expression     go to state 84
    logicalOrExp   go to state 241
    logicalAndExp  go to state 242
    equalityExp    go to state 243
    relationExp    go to state 244
    sumExp         go to state 245
    multExp        go to state 246
    unaryExp       go to state 247
    baseValue      go to state 248
    mutable        go to state 249
    functCall      go to state 250
    args           go to state 85
    argList        go to state 86
    constant       go to state 251


State 56

   73 unaryExp: "!" unaryExp .

    "+"   reduce using rule 73 (unaryExp)
    "-"   reduce using rule 73 (unaryExp)
    "*"   reduce using rule 73 (unaryExp)
    "/"   reduce using rule 73 (unaryExp)
    "%"   reduce using rule 73 (unaryExp)
    "<"   reduce using rule 73 (unaryExp)
    "<="  reduce using rule 73 (unaryExp)
    ">"   reduce using rule 73 (unaryExp)
    ">="  reduce using rule 73 (unaryExp)
    "!="  reduce using rule 73 (unaryExp)
    "=="  reduce using rule 73 (unaryExp)
    "||"  reduce using rule 73 (unaryExp)
    "&&"  reduce using rule 73 (unaryExp)
    ";"   reduce using rule 73 (unaryExp)


State 57

   74 baseValue: "(" expression . ")"

    ")"  shift, and go to state 87


State 58

   51 expression: logicalOrExp .
   54 logicalOrExp: logicalOrExp . "||" logicalAndExp

    "||"  shift, and go to state 252

    ")"  reduce using rule 51 (expression)


State 59

   52 expression: mutable . "=" logicalOrExp
   78 baseValue: mutable .

    "="  shift, and go to state 88
